Fixed messages loading, header logo redirect, gender radio buttons spacing and logout button styling

--- a/src/webapp/style.css
+++ b/src/webapp/style.css
@@ -264,6 +264,10 @@ body {
         opacity: 0.5;
     }
 
+    .gender-register {
+        display: flex;
+    }
+
     .login-wrapper > .user-input-area,
     .register-wrapper > .user-input-area {
         padding: 5%;
